test_regress/t/t_display_bad.out
%Error: t/t_display_bad.v:11:7: Missing arguments for $display-like format
   11 |       $display("%x");   
      |       ^~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_display_bad.v:13:7: Unknown $display-like format code: '%q'
   13 |       $display("%q");   
      |       ^~~~~~~~
%Error: Exiting due to
